--- a/_data/language/bhili.csv
+++ b/_data/language/bhili.csv
@@ -1,3 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Gospel for Asia,0115,0130,7465, ,Mo, , , , , ,Tashkent
-Gospel for Asia,1400,1415,15285, , , , ,Th, , ,Nauen
+Trans World Radio,1430,1445,12160,, Mo,,,,,,Grigoriopol
