--- a/_data/language/garhwali.csv
+++ b/_data/language/garhwali.csv
@@ -1,4 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Gospel for Asia,0030,0045,7465,Su, , , , , ,Sa,Tashkent
-Trans World Radio,1330,1345,1467, , , , , ,Fr, ,Bishkek
-Trans World Radio,1330,1345,1467, , , , , ,Fr, ,Bishkek
+Trans World Radio,1400,1415,9300,,,,We,Th, Fr,,Yerevan
