--- a/_data/language/kashmiri.csv
+++ b/_data/language/kashmiri.csv
@@ -1,2 +1,3 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Trans World Radio,1345,1400,9300, Su,,,,,, Sa,Yerevan
+Gospel for Asia,1230,1245,15285, , , ,We,Th, , ,Nauen
+Trans World Radio,1330,1345,1467, , , , , , ,Sa,Bishkek
