--- a/_data/language/bhojpuri.csv
+++ b/_data/language/bhojpuri.csv
@@ -1,2 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Trans World Radio,1400,1430,9910,, Mo,Tu,We,Th, Fr,,Yerevan
+Reach Beyond Australia,1345,1400,9720, , ,Tu, , , ,Sa,Kununurra
