--- a/_data/language/bondo.csv
+++ b/_data/language/bondo.csv
@@ -1,2 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Gospel for Asia,1400,1415,15285, , , ,We, , , ,Nauen
+Trans World Radio,1330,1345,9300,,,,We,,,,Yerevan
