--- a/_data/language/dogri.csv
+++ b/_data/language/dogri.csv
@@ -1,2 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Trans World Radio,1345,1400,9300,,,,,Th, Fr,,Yerevan
+Gospel for Asia,0045,0100,7465, , , , ,Th,Fr, ,Tashkent
