--- a/_data/language/english.csv
+++ b/_data/language/english.csv
@@ -1,3 +1,152 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Trans World Radio,1530,1600,9300, Su,,,,,, Sa,Yerevan
-Trans World Radio,1535,1540,9300,, Mo,Tu,We,Th, Fr,,Yerevan
+Adventist World Radio,1530,1600,15670,Su,Mo,Tu,We, , ,Sa,Nauen
+Adventist World Radio,1600,1630,9580,Su,Mo,Tu,We,Th,Fr,Sa,Trincomalee
+Adventist World Radio,1600,1630,9490,Su,Mo,Tu,We,Th,Fr,Sa,Yerevan
+All India Radio,1000,1100,1053,Su,Mo,Tu,We,Th,Fr,Sa,Tuticorin
+All India Radio,1000,1100,7270,Su,Mo,Tu,We,Th,Fr,Sa,Chennai
+All India Radio,1000,1100,13605,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1000,1100,13695,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1000,1100,15030,Su,Mo,Tu,We,Th,Fr,Sa,Aligarh
+All India Radio,1000,1100,15770,Su,Mo,Tu,We,Th,Fr,Sa,Panaji
+All India Radio,1000,1100,17895,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1330,1500,9690,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1330,1500,13695,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1745,1945,9445,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1745,1945,9910,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,1745,1945,11935,Su,Mo,Tu,We,Th,Fr,Sa,Mumbai
+All India Radio,2045,2230,9445,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,2045,2230,9910,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,2045,2230,11620,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+All India Radio,2045,2230,11740,Su,Mo,Tu,We,Th,Fr,Sa,Panaji
+All India Radio,2245,0045,6045,Su,Mo,Tu,We,Th,Fr,Sa,Delhi
+All India Radio,2245,0045,9445,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
+Bangladesh Betar,1230,1300,4750,Su,Mo,Tu,We,Th,Fr,Sa,Dhaka
+Bangladesh Betar,1745,1900,4750,Su,Mo,Tu,We,Th,Fr,Sa,Dhaka
+BBC London,0000,0100,5970,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,0000,0100,7300,Su,Mo,Tu,We,Th,Fr,Sa,Wofferton
+BBC London,0100,0200,5970,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,0100,0200,12095,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
+BBC London,0200,0230,1413,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,1200,1300,12065,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,1200,1300,15310,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,1300,1400,1413,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,1300,1400,11890,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+BBC London,1300,1400,12065,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
+BBC London,1430,1500,1413,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
+Bhutan Bc Service,0800,1200,6035,Su,Mo,Tu,We,Th,Fr,Sa,Thimphu
+Bible Voice,0200,0230,11945,Su,,,,Th,,Sa,Yerevan
+Bible Voice,1400,1500,15265,,,,,,,Sa,Issoudun
+China Radio Intl,0000,0057,6075,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0000,0057,7425,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0100,0200,9470,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0100,0157,9535,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0100,0157,11770,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0100,0157,15785,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,0200,0300,11770,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0200,0257,13640,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0700,1300,17490,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0700,0900,17670,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0900,1000,17570,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,0900,1000,17650,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,0900,1100,17750,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1000,1057,11635,Su,Mo,Tu,We,Th,Fr,Sa,Beijing
+China Radio Intl,1000,1100,11895,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1000,1200,13590,Su,Mo,Tu,We,Th,Fr,Sa,Beijing
+China Radio Intl,1000,1157,13720,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1100,1157,11795,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1200,1257,9460,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1200,1300,9600,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1200,1257,9645,Su,Mo,Tu,We,Th,Fr,Sa,Beijing
+China Radio Intl,1200,1257,9730,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1200,1300,9760,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1200,1257,11670,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1200,1400,11760,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1200,1357,11980,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1200,1500,15590,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1300,1357,9800,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1300,1400,9870,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1300,1400,13670,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1300,1400,13755,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1400,1500,9870,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1400,1457,11675,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1400,1457,11765,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1400,1457,11815,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1400,1457,13710,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1500,1557,7395,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1500,1600,9720,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
+China Radio Intl,1500,1557,9870,Su,Mo,Tu,We,Th,Fr,Sa,Xian
+China Radio Intl,1500,1600,11610,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1500,1600,15245,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1600,1800,6060,Su,Mo,Tu,We,Th,Fr,Sa,Kunming
+China Radio Intl,1600,1800,7235,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,1700,1757,6140,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,2300,2357,5915,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,2300,2400,6180,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,2300,2400,6180,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
+China Radio Intl,2300,2357,11690,Su,Mo,Tu,We,Th,Fr,Sa,Beijing
+FEBA Radio,1415,1430,11580, ,Mo, , , , , ,Trincomalee
+KBS World Seoul,1300,1400,9570,Su,Mo,Tu,We,Th,Fr,Sa,Kimjae
+KBS World Seoul,1400,1700,9785,Su,Mo,Tu,We,Th,Fr,Sa,Kimjae
+KBS World Seoul,1500,1700,9515,Su,Mo,Tu,We,Th,Fr,Sa,Kimjae
+KNLS  WCB,0200,0300,9600,Su,Mo,Tu,We,Th,Fr,Sa,Madagarcar
+KNLS  WCB,0300,0400,15515,Su,Mo,Tu,We,Th,Fr,Sa,Madagarcar
+Radio Filipinas,0200,0300,12010,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Filipinas,0200,0300,15640,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Filipinas,0200,0300,17820,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Filipinas,1730,1930,9910,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Filipinas,1730,1930,12120,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Filipinas,1730,1930,15190,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Radio Japan,1100,1130,11695,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
+Radio Japan,1300,1330,15735,Su,Mo,Tu,We,Th,Fr,Sa,Tashkent
+Radio Japan,1400,1430,11705,Su,Mo,Tu,We,Th,Fr,Sa,Palau
+Radio Japan,1400,1430,11935,Su,Mo,Tu,We,Th,Fr,Sa,Tashkent
+Radio New Zealand Intl,1100,1258,7425,Su,Mo,Tu,We,Th,Fr,Sa,Rangitaiki
+Radio Romania Intl,0300,0356,11825,Su,Mo,Tu,We,Th,Fr,Sa,Galbeni
+Radio Romania Intl,0530,0556,17760,Su,Mo,Tu,We,Th,Fr,Sa,Galbeni
+Radio Romania Intl,0530,0556,21500,Su,Mo,Tu,We,Th,Fr,Sa,Tiganesti
+Radio Romania Intl,1100,1156,15320,Su,Mo,Tu,We,Th,Fr,Sa,Galbeni
+Radio Romania Intl,1100,1156,17670,Su,Mo,Tu,We,Th,Fr,Sa,Galbeni
+Radio Taiwan Intl,0300,0400,15320,Su,Mo,Tu,We,Th,Fr,Sa,Taipei
+Radio Taiwan Intl,1100,1200,7445,Su,Mo,Tu,We,Th,Fr,Sa,Taipei
+Radio Taiwan Intl,1600,1700,9405,Su,Mo,Tu,We,Th,Fr,Sa,Taipei
+Radio Teheran,1520,1620,9800,Su,Mo,Tu,We,Th,Fr,Sa,Sirjan
+Radio Thailand,0000,0030,15590,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Radio Thailand,0030,0100,15590,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Radio Thailand,0200,0230,15590,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Radio Thailand,0530,0600,17640,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Radio Thailand,1230,1300,9390,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Radio Thailand,1400,1430,9390,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+Reach Beyond Australia,1115,1130,15575, ,Mo,Tu,We, ,Fr, ,Kununurra
+Reach Beyond Australia,1145,1200,11905,Su, , , , , ,Sa,Kununurra
+Reach Beyond Australia,1245,1300,9685,Su,Mo,Tu,We,Th,Fr,Sa,Kununurra
+Reach Beyond Australia,1300,1330,9610,Su, , , , , ,Sa,Kununurra
+Reach Beyond Australia,1315,1330,15320, ,Mo, ,We, ,Fr, ,Kununurra
+Saudi Arab Radio,0930,1225,15250,Su,Mo,Tu,We,Th,Fr,Sa,Riyadh
+Trans World Radio,1645,1700,882, , , , , , ,Sa,Puttalam
+Trans World Radio,1100,1130,11965, ,Mo, , , , , ,Agana
+Trans World Radio,1100,1145,11965, , ,Tu,We,Th,Fr, ,Agana
+Trans World Radio,1100,1155,11965,Su, , , , , , ,Agana
+Trans World Radio,1245,1315,12160, , , , , , ,Sa,Agana
+VOA Washington,1130,1200,1575,Su,Mo,Tu,We,Th,Fr,Sa,Bangkok
+VOA Washington,1130,1200,12030,Su,Mo,Tu,We,Th,Fr,Sa,Udon Thani
+VOA Washington,1130,1200,15715,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+VOA Washington,1130,1200,17790,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Voice of Indonesia,1000,1100,9525,Su,Mo,Tu,We,Th,Fr,Sa,Jakarta
+Voice of Indonesia,1300,1400,9525,Su,Mo,Tu,We,Th,Fr,Sa,Jakarta
+Voice of Korea,0500,0557,13650,Su,Mo,Tu,We,Th,Fr,Sa,Kujang
+Voice of Korea,0500,0557,15105,Su,Mo,Tu,We,Th,Fr,Sa,Kujang
+Voice of Korea,1600,1657,9890,Su,Mo,Tu,We,Th,Fr,Sa,Kujang
+Voice of Korea,1600,1657,11645,Su,Mo,Tu,We,Th,Fr,Sa,Kujang
+Voice of Mongolia,1030,1100,12085,Su,Mo,Tu,We,Th,Fr,Sa,Ulaanbatar
+Voice of Mongolia,1530,1600,12015,Su,Mo,Tu,We,Th,Fr,Sa,Ulaanbatar
+Voice of Turkey,1630,1725,15520,Su,Mo,Tu,We,Th,Fr,Sa,Emirler
+Voice of Vietnam,1130,1200,9840,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1130,1200,12020,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1230,1300,9840,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1230,1300,12020,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1500,1530,7285,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1500,1530,9840,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1500,1530,12020,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1600,1630,7220,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1600,1630,9550,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
+Voice of Vietnam,1600,1630,9730,Su,Mo,Tu,We,Th,Fr,Sa,Hanoi
