--- a/_data/language/hindi.csv
+++ b/_data/language/hindi.csv
@@ -1,56 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Adventist World Radio,1530,1600,15285,Su,Mo,Tu,We,Th,Fr,Sa,Yerevan
-Adventist World Radio,1530,1600,15215,Su,Mo,Tu,We,Th,Fr,Sa,Nauen
-All India Radio,0315,0415,13695,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,0315,0415,15030,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,0315,0415,15185,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,0430,0530,15185,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,1615,1730,9950,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,1615,1730,12025,Su,Mo,Tu,We,Th,Fr,Sa,Panaji
-All India Radio,1945,2045,9445,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,2300,2400,9910,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-All India Radio,2300,2400,11590,Su,Mo,Tu,We,Th,Fr,Sa,Panaji
-All India Radio,2300,2400,13695,Su,Mo,Tu,We,Th,Fr,Sa,Bengaluru
-Bangladesh Betar,1515,1545,4750,Su,Mo,Tu,We,Th,Fr,Sa,Dhaka
-BBC London,0100,0130,1413,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
-BBC London,0100,0130,6070,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
-BBC London,0100,0130,7290,Su,Mo,Tu,We,Th,Fr,Sa,Dhabayya
-BBC London,0100,0130,9410,Su,Mo,Tu,We,Th,Fr,Sa,Dhabayya
-BBC London,0100,0130,11995,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
-BBC London,1400,1430,1413,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
-BBC London,1400,1430,11995,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
-BBC London,1400,1430,9460,Su,Mo,Tu,We,Th,Fr,Sa,A'Seela
-BBC London,1400,1430,9510,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
-BBC London,1400,1430,11795,Su,Mo,Tu,We,Th,Fr,Sa,Singapore
-China Radio Intl,0300,0357,11640,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,0300,0357,13720,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,0300,0357,15210,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,0300,0400,15350,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,1300,1357,9450,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,1300,1400,11675,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
-China Radio Intl,1500,1557,7225,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
-China Radio Intl,1500,1557,7265,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,1600,1657,5915,Su,Mo,Tu,We,Th,Fr,Sa,Kashi
-China Radio Intl,1600,1657,7395,Su,Mo,Tu,We,Th,Fr,Sa,Urumqi
-FEBA Radio,1430,1500,9500,Su,Mo,Tu,We,Th,Fr,Sa,Tashkent
-Gospel for Asia,1615,1630,15150,Su,Mo,Tu,We,Th,Fr,Sa,Nauen
-Gospel for Asia,1315,1330,15285,Su, , , , , ,Sa,Nauen
-Gospel for Asia,1445,1500,15285, ,Mo,Tu,We,Th,Fr, ,Nauen
-Radio Japan,0100,0120,9820,Su,Mo,Tu,We,Th,Fr,Sa,Tashkent
-Radio Japan,1430,1500,15745,Su,Mo,Tu,We,Th,Fr,Sa,Madagascar
-Radio Japan,1530,1600,9600,Su,Mo,Tu,We,Th,Fr,Sa,Tashkent
-Radio Teheran,1420,1520,9810,Su,Mo,Tu,We,Th,Fr,Sa,Sirjan
-Radio Teheran,1420,1520,12050,Su,Mo,Tu,We,Th,Fr,Sa,Sirjan
-Reach Beyond Australia,1200,1230,11750,Su,Mo,Tu,We,Th,Fr,Sa,Kununurra
-Reach Beyond Australia,1215,1245,11900,Su,Mo,Tu,We,Th,Fr,Sa,Kununurra
-Reach Beyond Australia,1245,1315,11750,Su, ,Tu,We, ,Fr, ,Kununurra
-Reach Beyond Australia,1245,1300,11900,Su,Mo,Tu,We,Th,Fr, ,Kununurra
-Reach Beyond Australia,1300,1330,15320,Su, , , , , , ,Kununurra
-Reach Beyond Australia,1400,1430,9720,Su,Mo,Tu,We,Th,Fr,Sa,Kununurra
-Reach Beyond Australia,1430,1445,9720,Su,Mo,Tu,We,Th,Fr, ,Kununurra
-Sri Lanka B/C Colombo,0030,0045,11905,,,,,Th,Fr,,Trincomalee
-Sri Lanka B/C Colombo,0045,0100,11905,Su,Mo,Tu,We,Th,Fr,Sa,Trincomalee
-Sri Lanka B/C Colombo,0200,0230,11905,Su,Mo,Tu,We,Th,Fr,Sa,Trincomalee
-Trans World Radio,2300,2330,882,Su,Mo,Tu,We,Th,Fr,Sa,Puttalam
-Vatican Radio,1430,1450,5920,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
-Vatican Radio,1430,1450,7320,Su,Mo,Tu,We,Th,Fr,Sa,Philippines
+Adventist World Radio,1530,1600,1548,Su,Mo,Tu,We,Th,Fr,Sa,Trincomalee
