--- a/_data/language/kui.csv
+++ b/_data/language/kui.csv
@@ -1,2 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Trans World Radio,1315,1330,9300,,,,,,, Sa,Yerevan
+Gospel for Asia,1415,1430,15285, ,Mo,Tu, , , , ,Nauen
