--- a/_data/language/maithili.csv
+++ b/_data/language/maithili.csv
@@ -1,2 +1,3 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Gospel for Asia,1530,1545,15150, , , ,We,Th,Fr, ,Nauen
+Trans World Radio,1315,1345,9910,, Mo,Tu,We,Th, Fr,,Yerevan
+Trans World Radio,1330,1345,9300, Su,,,,,,,Yerevan
