--- a/_data/language/marwari.csv
+++ b/_data/language/marwari.csv
@@ -1,6 +1,2 @@
 station,start,end,freq,d1,d2,d3,d4,d5,d6,d7,tx
-Gospel for Asia,0100,0115,7465, ,Mo,Tu, , , , ,Tashkent
-Gospel for Asia,1345,1400,15285, ,Mo,Tu, , , , ,Nauen
-Reach Beyond Australia,1230,1245,11750,Su, , , , , , ,Kununurra
-Reach Beyond Australia,1315,1330,11750, ,Mo, , , , , ,Kununurra
-Reach Beyond Australia,1330,1345,9720, , ,Tu, , , , ,Kununurra
+Trans World Radio,1345,1400,12160,, Mo,Tu,We,,,,Tashkent
